# verbo

./: .gitignore  CLAUDE.md  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
Verbo/: Makefile  project.yml
Verbo/Verbo/: AppDelegate.swift  Info.plist  VerboApp.swift
Verbo/Verbo.xcodeproj/: project.pbxproj
Verbo/Verbo/Adapters/: IFlytekSTTAdapter.swift  LLMAdapter.swift  OpenAILLMAdapter.swift  (+1 more)
Verbo/VerboTests/: PipelineEngineTests.swift  VerboTests.swift
benchmarks/: stt-latency.mjs
src/: App.tsx  main.tsx  smoke.test.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  hotkey.rs  lib.rs  main.rs  output.rs  tray.rs
src/audio/: recorder.test.ts  recorder.ts
src/config/: config.test.ts  defaults.ts  store.ts
src/engine/: pipeline.test.ts  pipeline.ts
src/hooks/: useHotkey.ts  usePipeline.test.ts  usePipeline.ts
src/i18n/: en.ts  i18n.test.ts  index.ts  zh-CN.ts
src/stores/: app.ts  history.test.ts  history.ts  recording.test.ts  recording.ts
src/styles/: global.css  tokens.css
src/types/: config.ts  history.ts  index.ts  pipeline.ts  types.test.ts
tests/: config.test.ts  pipeline.test.ts  types.test.ts
tests/adapters/: llm-openai.test.ts  llm-registry.test.ts  stt-iflytek.test.ts  stt-registry.test.ts
tests/audio/: recorder.test.ts
tests/hooks/: usePipeline.test.ts
tests/i18n/: i18n.test.ts
tests/stores/: history.test.ts  recording.test.ts
tests/windows/: floating.test.tsx  history.test.tsx  settings.test.tsx
(+85 files in other folders)
