[package]
name = "verbo"
version = "0.1.0"
description = "A modular voice input desktop app"
authors = ["you"]
edition = "2021"

[lib]
name = "verbo_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSObject"] }
objc2-app-kit = { version = "0.3", features = ["NSWindow", "NSResponder", "NSView", "NSPanel"] }
